fix: Add bottom spacing to tabs menu

--- a/assets/scss/_tabs.scss
+++ b/assets/scss/_tabs.scss
@@ -10,7 +10,7 @@
 		min-height: 58px;
 		display: flex;
 		flex-flow: row wrap;
-		margin: 0;
+		margin: 0 0 20px;
 		padding: 0 20px;
 		background: #fff;
 		font-size: 14px;
